k3s-manifest/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
#  type: NodePort
  ports:
    - protocol: TCP
      port: 80          # Service port inside cluster
      targetPort: 80    # Pod container port
#  nodePort: 30800   # NodePort on EC2
